--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,21 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    signingConfigs {
+        config {
+            keyAlias 'UnitedGroupProject'
+            keyPassword 'UnitedApp'
+            storeFile file('Safehub.jks')
+            storePassword 'UnitedApp'
+        }
+    }
+
     buildTypes {
+        debug {
+            signingConfig signingConfigs.config
+        }
         release {
+            signingConfig signingConfigs.config
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -40,4 +53,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.huawei.agconnect:agconnect-core:1.5.2.300'
     implementation 'com.huawei.hms:maps:5.3.0.300'
+    implementation 'com.huawei.agconnect:agconnect-appmessaging:1.5.2.300'
 }
