--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.huawei.agconnect:agconnect-core:1.5.2.300'
     implementation 'com.huawei.hms:maps:5.3.0.300'
+    implementation 'com.huawei.hms:push:5.3.0.304'
     implementation 'com.huawei.agconnect:agconnect-appmessaging:1.5.2.300'
 }
