Push Kit Implementation ( Unfinished )

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Safehub">
+        <service
+            android:name=".NotificationPush"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.huawei.push.action.MESSAGING_EVENT"></action>
+            </intent-filter>
+        </service>
         <activity android:name=".MapsActivity">
             <meta-data
                 android:name="com.huawei.hms.client.channel.androidMarket"
@@ -32,6 +39,8 @@
         </activity>
         <activity android:name=".MainMenu" />
         <activity android:name=".DailyCase"/>
+        <activity android:name=".NotificationPush"/>
+        <activity android:name=".PrivacyPolicy"/>
     </application>
 
 </manifest>
