--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     implementation 'com.huawei.hms:push:5.3.0.304'
     implementation 'com.huawei.agconnect:agconnect-appmessaging:1.5.2.300'
     implementation 'com.android.volley:volley:1.2.0'
+    implementation 'com.huawei.hms:location:5.0.4.300'
 }
