--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     implementation 'com.huawei.agconnect:agconnect-appmessaging:1.5.2.300'
     implementation 'com.android.volley:volley:1.2.0'
     implementation 'com.huawei.hms:location:5.0.4.300'
+    implementation 'com.huawei.hms:hianalytics:6.0.0.301'
 }
